--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,16 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+# IDE: IntelliJ IDEA Ultimate 2025.2
+.idea/
+*.iml
+*.iws
+*.ipr
+
+
+# Front: Angular
+front/node_modules
+front/dist
+front/.angular
+front/package-lock.json
+front/.browserslistrc
+front/.editorconfig
+
+
