feat: add feat consist to extract all detail product for admin

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -29,3 +29,11 @@ app.pwd=12345
 # Admin user initialization
 app.admin.email=admin@admin.com
 app.admin.password=admin123
+
+
+# Configuration de pagination
+app.pagination.default-page=0
+app.pagination.default-size-public=10
+app.pagination.default-size-admin=20
+app.pagination.max-size-public=100
+app.pagination.max-size-admin=200
