--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/alten_shop
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=password
+      - SPRING_PROFILES_ACTIVE=dev 
     volumes:
       - ./back/src:/app/src
       - ./back/pom.xml:/app/pom.xml
