--- a/back/src/main/resources/application-dev.properties
+++ b/back/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
+server.port=8080
+
+
 # Hibernate ne touche pas au schéma
 spring.jpa.hibernate.ddl-auto=none
 
@@ -16,3 +19,22 @@ spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.validationTimeout=5000
 spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.maximumPoolSize=10
+
+
+# ================= SPRINGDOC OPENAPI =================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.cache.disabled=true
+springdoc.show-actuator=true
+
+# Personnalisation
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.filter=true
+# ================= LOGGING =================
+logging.level.org.springframework=INFO
+logging.level.com.alten.shop=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
