--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8080
 spring.application.name=alten-shop-MVP
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
@@ -43,3 +44,22 @@ app.pagination.max-size-public=100
 app.pagination.max-size-admin=200
 # ASC or DESC
 app.pagination.default-sort=ASC
+
+
+# ================= SPRINGDOC OPENAPI =================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.cache.disabled=true
+springdoc.show-actuator=true
+
+# Personnalisation
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.filter=true
+# ================= LOGGING =================
+logging.level.org.springframework=INFO
+logging.level.com.alten.shop=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
