--- a/front/package.json
+++ b/front/package.json
@@ -32,7 +32,8 @@
     "rxjs": "7.8.1",
     "tslib": "2.0.3",
     "typescript": "5.4.5",
-    "zone.js": "0.14.7"
+    "zone.js": "0.14.7",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@angular/cli": "18.0.3",
