--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "types": ["node"],
     "baseUrl": "./src",
+    "paths": {
+      "@app/*": ["app/*"]
+    },
     "downlevelIteration": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
