--- a/front/package.json
+++ b/front/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --poll 2000"
+    "start": "ng serve --host 0.0.0.0 --poll 2000",
+    "start:dev": "ng serve --configuration development --host",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "biome": "biome",
+    "biome:fix": "biome format",
+    "biome:lint": "biome lint"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "18.0.3",
     "@angular/animations": "18.0.2",
     "@angular/cdk": "18.0.2",
     "@angular/common": "18.0.2",
@@ -31,16 +37,18 @@
     "quill": "1.3.7",
     "rxjs": "7.8.1",
     "tslib": "2.0.3",
-    "typescript": "5.4.5",
     "zone.js": "0.14.7",
     "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "18.0.3",
     "@angular/cli": "18.0.3",
     "@angular/language-service": "18.0.2",
     "@types/chart.js": "2.9.30",
     "@types/node": "20.12.12",
     "@biomejs/biome": "1.7.2",
-    "ts-node": "7.0.0"
+    "ts-node": "7.0.0",
+    "typescript": "5.4.5"
+
   }
 }
